deploy: 9d2727d1f13938dc467b8d6ba3979228b4bc80cc

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-他有時候顯得有點瘋？他是什麼樣的人，U和X都太了解，和他們在一起的時候，他瘋得更厲害。他不是太瘋，他是沒瘋夠。碰到我，對他來說或許是一個幸運吧，或許。
+R有時候顯得有點瘋？他是什麼樣的人，U和X都太了解，和他們在一起的時候，他瘋得更厲害。他不是太瘋，他是沒瘋夠。碰到我，對他來說或許是一個幸運吧，或許。
 瞧，&ldquo;高級影迷必備手冊&rdquo;，&ldquo;高級音樂理論&rdquo;，他開始買書了。天呢，他開始買書了，你敢相信嗎？發現自我？他是在發現怎麼治我。
 自己選的書，又問我覺得怎麼樣？接下來一定會說"早知道買那一本了"。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
