deploy: 6c060071be182a52ea8df5ee11b9d7460d17c6c6

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-我想我應該已經清楚了。繼續這樣下去也許只有一個結果，大家只會記得他是我的男朋友，沒有人知道魯且漁是誰。
+我想我應該已經清楚了。我身邊還是得有人能和我聊聊我的音樂。繼續這樣下去也許只有一個結果，大家只會記得他是我的男朋友，沒有人知道魯且漁是誰。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
