--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-小小的個子，大大的才藝。這種類型是不會愁沒人追求的。
-至於為什麼遇到R，那或許只是一個不大不小的美麗的意外。她想。
-魯且漁的英文名為什麼是R開頭，無非是R和L的口音比較接近。只是，這個R，應該不會是她的R，她的Mr Right。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+&ldquo;我喜歡秋天。"&ndash; R(魯且漁) =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 18, 2021</time>
