deploy: 2024defefd216a0ec3228312b9933b5cf1201e9f

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;我喜歡秋天。"&ndash; R(魯且漁)
+&ldquo;我喜歡秋天。"&ndash; 魯且漁(R&mldr; &mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
