--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;命運是個瞎子，他撞到了我。"&ndash; 南傾國(N&mldr; &mldr; =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+&ldquo;命運是個瞎子，他撞到了我。"&ndash; 傾國.南&mldr; &mldr; =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 18, 2021</time>
