--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-那個男人說我家里人沒文化才給我起這名字？南為君？聽起來很假。南傾君，還不如南傾國，傾君、清君，不是有個詞叫什麼清君側嗎，是一種權力，而且是很危險的權力，我可不喜歡權力。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+那個男人說我家里人沒文化才給我起這名字？南為君？聽起來太假。南傾君，還不如南傾國，傾君、清君，不是有個詞叫什麼清君側嗎，是一種權力，而且是很危險的權力，我不喜歡權力。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 18, 2021</time>
