deploy: ade22617deba8df799095bc398c8d679e9947cb7

--- a/index.html
+++ b/index.html
@@ -52,17 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「都是心理作用而已」J說。
-V沉默不語。與魯且漁不同，V不僅不信算命的，對一些科學也不信，尤其是心理學。 「姐姐哎姐姐，求求你了，你倒是說幾句啊」魯且漁說。
-「L知道，我不信心理學」V說。
-「你聽完V講的，再去看那些心理學的書，就會感覺還不如去玩遊戲」L說。
-「沒有嘍」V說。
-「行了別纏著F了，你哪知道V的哥哥是怎樣的存在」L說。
-「去你的」V說。
-「哦哦，應該說，是怎樣的仰望」L說。
-「仰望什麼，有什麼好仰望的」V說。
-「可不是親哥哥哦」L說。
-「L! 你是不是不想活了」V說。
+可能是天生要解的一道題，雖然不是什麼難題。就像X說的，魚是動物，不像其他那些意義明確的形容詞/名詞自帶解釋，也不像無意義的字那樣無需解釋。反正生命要有意義，可能以前想的太少吧。魯且漁想。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -94,11 +84,13 @@ V沉默不語。與魯且漁不同，V不僅不信算命的，對一些科學也
 </a>
 </h2>
 <div>
-<p>「這好像屬於用術、用咒的，好像聖經上說，這都不是好人做的事」N說。
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「這好像屬於用術、用咒的，好像聖經上說，這都不是好人做的事」N說。
 「確實，我看那人奇奇怪怪的，估計只會故弄玄虛」魯且漁說。
 「就像那十字架，難道少的就沒方向感，多的就能當導遊嗎」N說。
 「對對，這種就是專門欺負我讀書少」魯且漁說。
-「不是，誰會去讀那些算命的書呢」N說。</p>
+「不是，誰會去讀那些算命的書呢」N說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 21, 2021</time>
