deploy: 11ae1a175ef831b3764a0f364bbec11c1de7c657

--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-182/>
+【非真實地場】資料(182)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「感情這玩意兒，就像這橙汁，只要喝過一次原味的，甚至仔細聞過一次橙子，你肯定就知道什麼是真的」C說。 「要是沒喝過真的，或者沒聞過真的，那就麻煩了」G說。
+「反正就是個過程，直到碰到真的為止，如果你還在乎感情的話」C說。
+「看來，辨別渣男說難也難，說容易也容易」G說。
+「要辨別假的，總得知道啥是真的」C說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 21, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-181/>
 【非真實地場】資料(181)
 </a>
@@ -185,22 +204,6 @@
 命運選中了她，成百上千甚至成千上萬個傾國的名字，只有她，真的傾國了。
 這只是運氣，不能再靠運氣了，她想。
 「不能給我女兒起這麼有野心的名字了」她說。 「沒有吧」L說。 「那是我爸運氣好，讓我出名了，我可沒這神。哦。。我是說沒這麼好的運氣。再說，這真傾了國，有幾成能是好事呢？」她說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 18, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-172/>
-【非真實地場】資料(172)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;我喜歡秋天。"&ndash; 魯且漁(R&mldr; &mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 18, 2021</time>
