deploy: 49eec201bc89bba3ef07bc02ce1024f1ce30a20c

--- a/index.html
+++ b/index.html
@@ -46,6 +46,35 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-183/>
+【非真實地場】資料(183)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「這還不簡單，一眼就看出來了。神是假的，造神就是造假」他說。 與很多其他無神論者不同，對於宗教他似乎有些自己的見解，而且好像還有些深刻。
+「你覺得所有相信神的人都很假？」她說。
+「愚蠢的人類。沒有神，神都是造出來的，無神論者從不造神」他說。
+天呢，他知道自己是無神論者，這讓她刮目相看。
+「那你覺得造什麼有意思？」她說。
+「幸福的生活，營造。。愛的氣氛，就像現在，這些才是實實在在的」他說。
+「這兒真不錯，你剛才說要去看電影，有什麼推薦的嗎？海報上那個，國際上拿了獎呢」她說。
+「我不看戰爭片，戰爭，最邪惡」他說。
+「這麼說，你很討厭戰爭販子嘍？」她說。
+「當然，都是些唯利是圖的奸商」他說。
+「你是說，商人假，戰爭販子，那就是又壞又假」她說。
+「你說的真對！」他說。
+「那你一定對賺大錢沒什麼興趣吧？」她說。
+「賺錢？賺錢有什麼錯嗎？再說，哪有那麼容易賺大錢」他說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 21, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-182/>
 【非真實地場】資料(182)
 </a>
@@ -188,23 +217,6 @@
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 &ldquo;這是深秋的生命裡遇見生命的深秋。"&ndash; Herm&mldr; &mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 18, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-173/>
-【非真實地場】資料(173)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-命運選中了她，成百上千甚至成千上萬個傾國的名字，只有她，真的傾國了。
-這只是運氣，不能再靠運氣了，她想。
-「不能給我女兒起這麼有野心的名字了」她說。 「沒有吧」L說。 「那是我爸運氣好，讓我出名了，我可沒這神。哦。。我是說沒這麼好的運氣。再說，這真傾了國，有幾成能是好事呢？」她說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 18, 2021</time>
