deploy: ed537d845c53a1b50cd39eb80478561742b83342

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-我痛恨神學，就像痛恨外衣。我痴迷科學，因為它從不穿外衣。
+我痛恨神學，就像痛恨外衣。我酷愛科學，它從不穿外衣。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
