--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-188/>
+【非真實地場】資料(188)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「為什麼用酷愛而不是痴迷」讀者問。 「因為我是搞科學的，用"痴迷科學"，可能會被認為在勾引別人」他說。 「啊？喜歡科學與喜歡科學家又不是一回事。而且，痴迷，我覺得很形象啊」讀者問。 「迷、戀、迷戀，可能都會被認為是勾引別人」他說。 「什麼？」讀者問。 「所以我用愛這個字，並且用酷愛來區分一般的喜歡和超級喜歡」他說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 22, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-187/>
 【非真實地場】資料(187)
 </a>
@@ -209,24 +224,9 @@
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-178/>
-【非真實地場】資料(178)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-那幾天她幾乎沒背台詞，那個角色不是她常演的類型，或是她認識的人。那個角色的原型就是她。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 19, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
 </div>
 <div class=paginator>
-<p>Page 1 of 23</p>
+<p>Page 1 of 24</p>
 <div class=paginator-group>
 <a class="color-link older" href=/page/2/>
 Older<svg width="13" height="9" viewBox="0 0 13 9" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink"><g class="color-arrow" fill="#63bda2" fill-rule="nonzero"><polygon points="7.6707477 1.37628835 8.3292523 0.623711653 12.7592994 4.50000282 8.32918951 8.37629079 7.67069049 7.62370921 11.2407006 4.49999718"/><polygon id="Path" points="0 5 0 4 12 4 12 5"/></g></svg>
