--- a/index.html
+++ b/index.html
@@ -46,13 +46,28 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-189/>
+【非真實地場】資料(189)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+渣男應該和男神有區別，人渣兒應該和人尖兒有區別，哪怕是模糊的區別。就這麼簡單。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 22, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-188/>
 【非真實地場】資料(188)
 </a>
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「為什麼用酷愛而不是痴迷」讀者問。 「因為我是搞科學的，用"痴迷科學"，可能會被認為在勾引別人」他說。 「啊？喜歡科學與喜歡科學家不是一回事吧。而且，痴迷，我覺得很形象啊」讀者問。 「迷、戀、迷戀，可能都會被認為是勾引別人，或者是自誇、自戀、自大」他說。 「什麼？」讀者問。 「所以我用愛這個字，並且用酷愛來區分一般的喜歡和超級喜歡」他說。 「除了偶爾提到真理這個詞以外，你好像很少用專業名詞，為什麼會被認為自大」讀者問。 「我不知道」他說。 「談談對內捲的看法吧」讀者問。 「內捲，就是兩個瘦女人在打拳擊」他說。
+「為什麼用酷愛而不是痴迷」主持人問。 「因為我是搞科學的，用"痴迷科學"，可能會被認為在勾引別人」他說。 「啊？喜歡科學與喜歡科學家不是一回事吧。而且，痴迷，我覺得很形象啊」主持人問。 「迷、戀、迷戀，可能都會被認為是勾引別人，或者是自誇、自戀、自大」他說。 「什麼？」主持人問。 「所以我用愛這個字，並且用酷愛來區分一般的喜歡和超級喜歡」他說。 「除了偶爾提到真理這個詞以外，你好像很少用專業名詞，為什麼會被認為自大」主持人問。 「我不知道」他說。 「談談對內捲的看法吧」主持人問。 「內捲，就是兩個瘦的不行的女人在打拳擊」他說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -198,26 +213,6 @@
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 8月1號正好是週一，第9天，也就是第二個星期的第二天。
 這還是8月，到時候估計更熱，他想。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 21, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-179/>
-【非真實地場】資料(179)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「這好像屬於用術、用咒的，好像聖經上說，這都不是好人做的事」N說。
-「確實，我看那人奇奇怪怪的，估計只會故弄玄虛」魯且漁說。
-「就像那十字架，難道少的就沒方向感，多的就能當導遊嗎」N說。
-「對對，這種就是專門欺負我讀書少」魯且漁說。
-「不是，誰會去讀那些算命的書呢」N說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
