--- a/index.html
+++ b/index.html
@@ -46,6 +46,47 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-192/>
+【非真實地場】資料(192)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「吾兄寄宿州，吾弟客东川，這是誰寫的？」她說。
+「小白的詩」他說。
+「新手仿的啊，確實不行」她說。
+「上一代的」他說。
+「你這哪是上一代的，就會忽悠我，這是唐代的，還什麼小白，說的跟你徒弟似的」她說。
+「就喜歡唐代的，尤其是美女，怎麼著吧」他說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 22, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-191/>
+【非真實地場】資料(191)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+他把臉貼在說明上，想看看那電視到底質量怎麼樣。
+「同時帶1、8、i的是假的」她說。
+「就這麼簡單？」他說。
+「就這麼簡單」她說。
+她說的沒錯，1080i是高清，1080p是真高清。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 22, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-190/>
 【非真實地場】資料(190)
 </a>
@@ -180,42 +221,6 @@
 「你說的真對！」他說。
 「那你一定對賺大錢沒什麼興趣吧？」她說。
 「賺錢？賺錢有什麼錯嗎？再說，哪有那麼容易賺大錢」他說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 21, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-182/>
-【非真實地場】資料(182)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「感情這玩意兒，就像這橙汁，只要喝過一次原味的，甚至仔細聞過一次橙子，你肯定就知道什麼是真的」C說。 「要是沒喝過真的，或者沒聞過真的，那就麻煩了」G說。
-「反正就是個過程，直到碰到真的為止，如果你還在乎感情的話」C說。
-「看來，辨別渣男說難也難，說容易也容易」G說。
-「要辨別假的，總得知道啥是真的，談感情又不是工作，總不能天天辨別真假，像個質檢員」C說。
-「就是，要是一起過麼長時間，最後發現是個渣男，那人生可太失敗了」G說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 21, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-181/>
-【非真實地場】資料(181)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-可能是天生要解的一道題，雖然不是什麼難題。就像X說的，魚是動物，不像其他那些意義明確的形容詞/名詞自帶解釋，也不像無意義的字那樣無需解釋。反正生命要有意義，可能以前想的太少吧。魯且漁想。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
