deploy: f1700b7cff4aa479f3e5daaf9d87ed4005a7957a

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-他把臉貼在背面，想看看那手機到底質量怎麼樣。
+他把臉貼在側面，想看看那手機到底質量怎麼樣。
 「亮的好」她說。
 「就這麼簡單？」他說。
 「就這麼簡單」她說。
