deploy: 4c81f5bb0468ba220302e7eabf22204f477baa8d

--- a/index.html
+++ b/index.html
@@ -46,6 +46,40 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-202/>
+【非真實地場】資料(202)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&ldquo;在數學與統計學中，大數法則（英語：Law of large numbers）又稱大數定律、大數律，是描述相當多次數重複實驗的結果的法則。根據這個法則知道，樣本數量越多，則其算術平均值就有越高的機率接近期望值。&rdquo;
+&ndash;Wi&mldr;&mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 22, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-201/>
+【非真實地場】資料(201)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&ldquo;美利堅合眾國&mldr;&mldr;人口 • 2019年估计 328,239,523&rdquo;
+&ndash;Wi&mldr;&mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 22, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-200/>
 【非真實地場】資料(200)
 </a>
@@ -180,45 +214,6 @@
 「後面的新」她說。
 「就這麼簡單？」他說。
 「就這麼簡單」她說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 22, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-192/>
-【非真實地場】資料(192)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-他把臉貼在側面，想看看那手機到底質量怎麼樣。
-「屏幕亮的好」她說。
-「就這麼簡單？」他說。
-「就這麼簡單」她說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 22, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-191/>
-【非真實地場】資料(191)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-他把臉貼在說明上，想看看那電視到底質量怎麼樣。
-「同時帶1、8、i的是假的」她說。
-「就這麼簡單？」他說。
-「就這麼簡單」她說。
-她說的沒錯，1080i是高清，1080p是真高清。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
