--- a/index.html
+++ b/index.html
@@ -46,14 +46,33 @@
 <div class=article-content>
 <article>
 <h2>
-<a href=https://blog.jinreal.com/posts/uf-material-203/>
-【非真實地場】資料(203)
+<a href=https://blog.jinreal.com/posts/uf-material-204/>
+Uf Material 204
 </a>
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 他把臉貼在玻璃上，想看看到底哪個牌子的電池好。
 「原裝的好」她說。
+「就這麼簡單？」他說。
+「就這麼簡單」她說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 23, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-203/>
+【非真實地場】資料(203)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+他把臉貼在玻璃上，想看看到底哪個是渣男。
+「最帥的那個」她說。
 「就這麼簡單？」他說。
 「就這麼簡單」她說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
@@ -193,25 +212,6 @@
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 他把臉貼在按鈕上，想看看那電視到底出了什麼問題。
 「使勁拍後面」她說。
-「就這麼簡單？」他說。
-「就這麼簡單」她說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 22, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-194/>
-【非真實地場】資料(194)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-他把臉貼在瓶子上，想看看那飲料到底哪個最貴。
-「原味的最貴」她說。
 「就這麼簡單？」他說。
 「就這麼簡單」她說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
