--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 他把臉貼在桌子上，想聽聽到底哪個是她天天說的渣男+LOSER。
-「最帥成績最好的那個」她說。
+「最帥、成績最高、背著我的那個」她說。
 「就這麼簡單？」他說。
 「就這麼簡單」她說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
