--- a/index.html
+++ b/index.html
@@ -46,13 +46,28 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-212/>
+【非真實地場】資料(212)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+ex，前一個男友的意思。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 23, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-211/>
 【非真實地場】資料(211)
 </a>
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-著名小說家的第一部愛情小說，以她的EX為原型，很容易暢銷，就這麼簡單。
+著名小說家的第一部愛情小說，以她的ex為原型，很容易暢銷，就這麼簡單。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -209,23 +224,6 @@
 </div>
 <div class=post-footer>
 <time>October 23, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-202/>
-【非真實地場】資料(202)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;在數學與統計學中，大數法則（英語：Law of large numbers）又稱大數定律、大數律，是描述相當多次數重複實驗的結果的法則。根據這個法則知道，樣本數量越多，則其算術平均值就有越高的機率接近期望值。&rdquo;
-&ndash;Wi&mldr;&mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 22, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
