deploy: 182934c8d80dc7ecfb2dc7cacc36ac001aba4881

--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-216/>
+【非真實地場】資料(216)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+他把臉貼在窗戶上，想聽聽到底哪個是她說的吹牛大王。
+「說我是國際巨星的那個」她說。
+「就這麼簡單？」他說。
+「就這麼簡單」她說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 23, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-215/>
 【非真實地場】資料(215)
 </a>
@@ -193,25 +212,6 @@ ex，前一個男友的意思。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 他把臉貼在相框上，想看看到底她因為看什麼而不想過河。
 「那個LOSER」她說。
-「就這麼簡單？」他說。
-「就這麼簡單」她說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 23, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-206/>
-【非真實地場】資料(206)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-他把臉貼在相框上，想看看到底誰是她說的LOSER。
-「背著我的那個」她說。
 「就這麼簡單？」他說。
 「就這麼簡單」她說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
