deploy: db77706e329b98054e9ff05df73f1594e6fc0e75

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 她把臉貼在單子上，想看看到底哪個是WINNER的成績。
-「成績最高的那個」她說。
+「最後面的那個」她說。
 「就這麼簡單？」他說。
 「就這麼簡單」她說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
