deploy: 368370bd597ff63192354e2bc314a68307a57d1e

--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-226/>
+【非真實地場】資料(226)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&ldquo;房子大的不一定格局大"這句話是他25號之前一兩天甚至更早就想到的，就這麼簡單。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 26, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-225/>
 【非真實地場】資料(225)
 </a>
@@ -195,25 +211,6 @@
 「我背著的那個」他說。
 「就這麼簡單？」她說。
 「就這麼簡單」他說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 23, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-216/>
-【非真實地場】資料(216)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-他把臉貼在窗戶上，想聽聽到底哪個是她說的大忽悠。
-「說我是國際巨星的那個」她說。
-「就這麼簡單？」他說。
-「就這麼簡單」她說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
