deploy: edda7e9813112573184bac203b15880ec89b7003

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;房子大的不一定格局大"這句話是他25號之前一兩天甚至更早就想到的，就這麼簡單。
+相比走路，跑步更容易倒，就這麼簡單。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
