--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 審美&ndash;對美麗的審判。
+與對正義的審判一樣，它的判官是太陽。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
