--- a/index.html
+++ b/index.html
@@ -46,13 +46,32 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-230/>
+【非真實地場】資料(229)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+他把臉貼在結果上，想看看到底哪個選手是他說的飛人。
+「三位數的那個」他說。
+「就這麼簡單？」她說。
+「就這麼簡單」他說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 26, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-229/>
 【非真實地場】資料(229)
 </a>
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-他們說這只是小小的比賽，很隨意，不用這麼認真？不管比賽大小我都認真。請告知他們，&ldquo;我認真，你們隨意&rdquo;，對，這應該是他們習慣的說法吧。
+他們說這只是小小的比賽，很隨意，不用這麼認真？不管比賽大小我都認真。告訴他們，&ldquo;我認真，你們隨意&rdquo;，對，這應該是他們習慣的說法吧。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -186,25 +205,6 @@
 下底傳中，一種常見戰術。
 上右後衛俯衝至下右底線的位置，是少見的長途飛行，毫無疑問，需要同時具備極強的飛控能力、身體和體能。
 如果傳給的是上前鋒(包括上中鋒、上二中鋒、上邊鋒等)，就形成了三維空間理論上最長距離的下底傳中，被稱為超時空傳遞。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 23, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-220/>
-【非真實地場】資料(220)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-她把臉貼在屏幕上，想看看到底哪個女生是不敢碰籃球的那個。
-「那個女王」他說。
-「就這麼簡單？」她說。
-「就這麼簡單」他說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
