--- a/index.html
+++ b/index.html
@@ -46,16 +46,34 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-231/>
+【非真實地場】資料(231)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+她經常跟著導演，他是看導演拍戲長大的。
+她喜歡剪紙，與導演拍戲不同，剪切之後，還需要將圖案粘到窗戶或紙上。
+Cut & paste(剪切與粘貼)是兩個步驟，而cut是一個口號，表示結束。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 26, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-230/>
 【非真實地場】資料(230)
 </a>
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-他把臉貼在計時器上，想看看到底哪個選手是他說的飛人。
-「三位數的那個」他說。
-「就這麼簡單？」她說。
-「就這麼簡單」他說。
+他把臉貼在計時器上，想看看到底哪個選手是她說的飛人。
+「三個數字的那個」她說。
+「就這麼簡單？」他說。
+「就這麼簡單」她說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -191,24 +209,6 @@
 </div>
 <div class=post-footer>
 <time>October 25, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-221/>
-【非真實地場】資料(221)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-下底傳中，一種常見戰術。
-上右後衛俯衝至下右底線的位置，是少見的長途飛行，毫無疑問，需要同時具備極強的飛控能力、身體和體能。
-如果傳給的是上前鋒(包括上中鋒、上二中鋒、上邊鋒等)，就形成了三維空間理論上最長距離的下底傳中，被稱為超時空傳遞。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 23, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
