--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-她經常跟著導演，他是看導演拍戲長大的。
-她喜歡剪紙，與導演拍戲不同，剪切之後，還需要將圖案粘到窗戶或紙上。
-Cut & paste(剪切與粘貼)是兩個步驟，而cut是一個口號，表示結束。
+他把臉貼在窗戶上，想聽聽到底哪個是她說的小不點。
+「1米8的那個」她說。
+「就這麼簡單？」他說。
+「就這麼簡單」她說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
