deploy: 305277515871cfd44021b62c34ab8cae7cde4c22

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 他把臉貼在窗戶上，想聽聽到底哪個是她說的小不點。
-「1米8的那個」她說。
+「一米八的那個」她說。
 「就這麼簡單？」他說。
 「就這麼簡單」她說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
