deploy: 7d1f1e7129844adb5f1d8da2bf5d11bfd85cc8aa

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「妹，你醒了」姐姐說。
+「妹妹，你醒了」姐姐說。
 「我沒睡」妹妹說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
