deploy: 629efaccf37c8c72cd257292422e488762231ffd

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「沒有任何研究證明星座和性格有關係，科學研究，你懂嗎」他說。
+「沒有任何研究證明星座和性格有關係」他說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
