--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-242/>
+Uf Material 242
+</a>
+</h2>
+<div>
+<p>「Prototype is framework」J說。
+「原型就是架子」Z重複著。這意味著，原型一定包含靈魂。但在現在的設計裡，原型和靈魂似乎無關。</p>
+</div>
+<div class=post-footer>
+<time>October 30, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-241/>
 【非真實地場】資料(241)
 </a>
@@ -183,23 +198,6 @@
 她，和被稱為LOSER的男人在一起。
 一個與WINNER同行，一個與LOSER同行，就這麼簡單。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 26, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-232/>
-【非真實地場】資料(232)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-她經常跟著導演，她是看導演拍戲長大的。
-她喜歡剪紙，與導演拍戲不同，剪切之後，還需要將圖案粘到窗戶或紙上。
-Cut & paste(剪切與粘貼)是兩個步驟，而cut是一個口號，表示結束。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 26, 2021</time>
