deploy: e5d50d5f6f0f26fabcf29fa3792f8578a353f71a

--- a/index.html
+++ b/index.html
@@ -62,12 +62,15 @@
 <article>
 <h2>
 <a href=https://blog.jinreal.com/posts/uf-material-242/>
-Uf Material 242
+【非真實地場】資料(242)
 </a>
 </h2>
 <div>
-<p>「Prototype is framework」J說。
-「原型就是架子」Z重複著。這意味著，原型一定包含靈魂。但在現在的設計裡，原型和靈魂似乎無關。</p>
+<p>「側面照，一種測試」他說。
+「什麼？」她說。
+「就是只看到側面，甚至離得很遠，但就覺得那個人很像某個人」他說。
+「啊？會嗎？」她說。
+「如果你痛過」他說。</p>
 </div>
 <div class=post-footer>
 <time>October 30, 2021</time>
