deploy: 0f641421267f4adfa54f49b6beeb40c2061fa450

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-進進兩難&ndash;進了兩步，卻感覺到兩分的難度，形容方向錯誤。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+進進兩難&ndash;進了兩步，卻感覺到兩分的難度，形容方向錯誤。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 30, 2021</time>
