deploy: f986decbf28402a3a4b8b24be5e3e0892593eb7f

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-好小喜功&ndash;偏好做小事，喜歡練功，形容遠離世事的修仙生活。
+裝蝶夢偶，又作裝蝶夢周。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
