deploy: f1320563ddfbe24fe1c686708f7bd503fc61a988

--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-252/>
+【非真實地場】資料(252)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+人二亦二&ndash;別人2，我也2。形容隨波逐流，沒有主見。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 31, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-251/>
 【非真實地場】資料(251)
 </a>
@@ -179,21 +195,6 @@
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 進進兩難&ndash;進了兩步，卻感覺到兩分的難度，形容方向錯誤。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 30, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-design/>
-【非真實地場】設計
-</a>
-</h2>
-<div>
-<p>「Prototype is framework」J說。
-「原型就是架子」Z重複著。這意味著，原型一定包含靈魂。但在現在的設計裡，原型和靈魂似乎無關。</p>
 </div>
 <div class=post-footer>
 <time>October 30, 2021</time>
