deploy: 4aa54e023bb393e2fc694f5b2010c1fd0486b765

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-是韭分明&ndash;是不是韭菜很明顯。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+摇不可急&ndash;是不是韭菜很明顯。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 2, 2021</time>
@@ -97,7 +97,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-夏去春来&ndash;夏天過去了，就像春天到來一樣。形容人在秋天處於熱戀期，愛意滿滿。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+塵山塵海(尘山尘海)&ndash;尘土形成的山与海。形容沙漠地带的景观。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 2, 2021</time>
@@ -112,7 +112,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-按兵不云&ndash;止住軍隊，不提及戰爭。形容氣勢緊張。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+按兵不雲&ndash;止住軍隊，不提及戰爭。形容無聲息的軍事部署，看起來和平卻有戰爭可能。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 2, 2021</time>
