--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-塵山塵海(尘山尘海)&ndash;尘土形成的山与海。形容沙漠地带的景观。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+塵山塵海(尘山尘海)&ndash;塵土形成的山與海。 形容沙漠地帶的景觀。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 2, 2021</time>
